// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UserHome > render a <UserHome /> with sessions 1`] = `
<div
  className="_blockList_f8cc7f"
>
  <h3
    className="_font-heading-md-semibold_1g2sj_129"
  >
    Where you're signed in
  </h3>
  <div
    className="_block_17898c _sessionListBlock_5d2854"
  >
    <div
      className="_sessionListBlockInfo_5d2854"
    >
      <h6
        className="_font-body-md-semibold_1g2sj_69"
      >
        Browser
      </h6>
      <p
        className="_font-body-md-regular_1g2sj_65"
      >
        2
         active
         
        sessions
      </p>
    </div>
    <a
      href="/sessions"
      onClick={[Function]}
    >
      View all
    </a>
  </div>
  <div
    className="_block_17898c _sessionListBlock_5d2854"
  >
    <div
      className="_sessionListBlockInfo_5d2854"
    >
      <h6
        className="_font-body-md-semibold_1g2sj_69"
      >
        New apps
      </h6>
      <p
        className="_font-body-md-regular_1g2sj_65"
      >
        3
         active
         
        sessions
      </p>
    </div>
    <a
      href="/oauth2-sessions"
      onClick={[Function]}
    >
      View all
    </a>
  </div>
  <div
    className="_block_17898c _sessionListBlock_5d2854"
  >
    <div
      className="_sessionListBlockInfo_5d2854"
    >
      <h6
        className="_font-body-md-semibold_1g2sj_69"
      >
        Regular apps
      </h6>
      <p
        className="_font-body-md-regular_1g2sj_65"
      >
        1
         active
         
        session
      </p>
    </div>
    <a
      href="/compat-sessions"
      onClick={[Function]}
    >
      View all
    </a>
  </div>
</div>
`;

exports[`UserHome > render an simple <UserHome /> 1`] = `
<div
  className="_blockList_f8cc7f"
>
  <h3
    className="_font-heading-md-semibold_1g2sj_129"
  >
    Where you're signed in
  </h3>
  <div
    className="_block_17898c _sessionListBlock_5d2854"
  >
    <div
      className="_sessionListBlockInfo_5d2854"
    >
      <h6
        className="_font-body-md-semibold_1g2sj_69"
      >
        Browser
      </h6>
      <p
        className="_font-body-md-regular_1g2sj_65"
      >
        0
         active
         
        sessions
      </p>
    </div>
    <a
      href="/sessions"
      onClick={[Function]}
    >
      View all
    </a>
  </div>
  <div
    className="_block_17898c _sessionListBlock_5d2854"
  >
    <div
      className="_sessionListBlockInfo_5d2854"
    >
      <h6
        className="_font-body-md-semibold_1g2sj_69"
      >
        New apps
      </h6>
      <p
        className="_font-body-md-regular_1g2sj_65"
      >
        0
         active
         
        sessions
      </p>
    </div>
    <a
      href="/oauth2-sessions"
      onClick={[Function]}
    >
      View all
    </a>
  </div>
  <div
    className="_block_17898c _sessionListBlock_5d2854"
  >
    <div
      className="_sessionListBlockInfo_5d2854"
    >
      <h6
        className="_font-body-md-semibold_1g2sj_69"
      >
        Regular apps
      </h6>
      <p
        className="_font-body-md-regular_1g2sj_65"
      >
        0
         active
         
        sessions
      </p>
    </div>
    <a
      href="/compat-sessions"
      onClick={[Function]}
    >
      View all
    </a>
  </div>
</div>
`;
